fix add fix file name an file path